Fix for action icons not showing correctly on firefox

--- a/scss/elements/_list_view.scss
+++ b/scss/elements/_list_view.scss
@@ -59,6 +59,7 @@
 .listView-actions {
   display: flex;
   align-items: start;
+  overflow: visible;
 }
 
 
